test/expected/explain_p_cdecl_v.out
explain void __cdecl *p
             ^
14: error: "__cdecl" can be used only for functions and pointers to function
